...
  TextEditingController _descriptionController = TextEditingController();

  // Method to show the title of the modal depending on the functionality
  Widget _buildTitle() {
    switch (widget.type) {
      case 'Add':
        return const Center(child: Text("Add new todo"));
      case 'Edit':
        return const Center(child: Text("Edit todo"));
      case 'Delete':
        return const Center(child: Text("Delete todo"));
      default:
        return const Text("");
...
